
2010-10-15  Steffen Gebert  <steffen@steffen-gebert.de>

	* Added feature #15942: locallangXMLOverride should not distinguish between paths ending with php and xml (Thanks to Andreas Kiessling)

2010-10-15  Benjamin Mack  <benni@typo3.org>

	* Added feature #15989: Create a new abstract class t3lib_message_abstractmessage

2010-10-15 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15822: t3lib_beFunc use $this in static methods
	* Fixed bug #15992: Bugfix: Incorrect default value of permalogin
	* Fixed bug #15993: Bug: Felogin shouldn't show the permalogin form controls when permalogin is set to "forced on" in install tool

2010-10-15  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #8980: unlink of non existant lockfiles generates warnings in frontend (Thanks to André Stösel)
	* Added feature #16004:  Add RTE to login news to give users the possibility to format the news and to add links etc.

2010-10-14  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #15800: Cleanup CSH code (Thanks to Benjamin Mack and Steffen Kamper)

2010-10-14  Benjamin Mack  <benni@typo3.org>

	* Followup to #15740: Move versioning code from TCEmain into "version" extension - delete action deleted entries twice (once in deleteAction and once in version extension)
	* Fixed bug #15798: Deprecate some old functions in typo3/template.php
	* Fixed bug #15801: Deprecate t3lib_div::rm_endcomma
	* Fixed bug #103: No Plain-text List Option

2010-10-13  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15644: Replace magic numbers for shortcut_mode with class constants
	* Follow-up to #15874: Provide unit tests for t3lib_div::dirname (Thanks to Oliver Klee)

2010-10-12  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #15168: Template auto complete is hidden beneath next text area field

2010-10-12  Steffen Kamper  <steffen@typo3.org>

	* Added feature #15950: Use t3editor in file_edit to edit files in fileadmin