@@ -12,6 +12,7 @@
 
 2010-10-15 Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #15662: Bug: SpriteGeneration generates wrong output if there are several icons sizes which are same width and nearly same count (Thanks to Steffen Ritter)
 	* Fixed bug #15822: t3lib_beFunc use $this in static methods
 	* Fixed bug #15992: Bugfix: Incorrect default value of permalogin
 	* Fixed bug #15993: Bug: Felogin shouldn't show the permalogin form controls when permalogin is set to "forced on" in install tool
